# course_6

./: .env_example  pyproject.toml  readme.md
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_photo.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  article_list.html
config/: settings.py  urls.py
fixtures/: auth_data.json  blog_data.json  mailing_data.json  users_data.json
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: fill.py  runappscheduler.py
mailing/migrations/: 0001_initial.py  0002_client_owner_mailingsettings_owner_mailingtext_owner.py  0003_alter_mailingsettings_period.py  0004_alter_mailingattempt_sent_datetime_and_more.py  0005_alter_mailingsettings_options.py
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_list.html  home.html  inc_confirm_delete.html  inc_form.html  inc_menu.html  mailing.html  mailingattempt_list.html  mailingsettings_detail.html  mailingsettings_list.html  mailingtext_detail.html  mailingtext_form.html  mailingtext_list.html
main/: urls.py  views.py
main/templates/main/: base.html  home.html  inc_footer.html  inc_main_menu.html  test.html
main/templatetags/: main_tags.py
secret_data/: secret_data_example.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_country_and_more.py  0003_alter_user_options.py
users/templates/users/: login.html  password_reset.html  (+3 more)
